<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#EEEEEE">
    <Button
            android:text="@string/stage001"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_gameStart_001"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"
            android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtvw_perfect_1" app:layout_constraintStart_toEndOf="@+id/btn_gameStart_001"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@+id/btn_gameStart_001"
            app:layout_constraintBottom_toBottomOf="@+id/btn_gameStart_001"/>
    <Button
            android:text="@string/stage002"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_gameStart_002" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_gameStart_001"/>
    <TextView
            android:text="@string/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtvw_perfect_2"
            app:layout_constraintTop_toTopOf="@+id/btn_gameStart_002"
            app:layout_constraintBottom_toBottomOf="@+id/btn_gameStart_002"
            app:layout_constraintStart_toEndOf="@+id/btn_gameStart_002" android:layout_marginStart="20dp"/>
    <Button
            android:text="@string/stage003"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_gameStart_003" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_gameStart_002" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp"/>
    <TextView
            android:text="@string/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtvw_perfect_3" app:layout_constraintStart_toEndOf="@+id/btn_gameStart_003"
            android:layout_marginStart="20dp" app:layout_constraintTop_toTopOf="@+id/btn_gameStart_003"
            app:layout_constraintBottom_toBottomOf="@+id/btn_gameStart_003"/>
</android.support.constraint.ConstraintLayout>