<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameActivity" android:background="#EEEEEE">

    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp" app:srcCompat="@drawable/line_vertical"
            android:id="@+id/imgvw_line01"
            android:contentDescription="@string/line"
            app:layout_constraintStart_toStartOf="@+id/btn_switch01"
            app:layout_constraintEnd_toEndOf="@+id/btn_switch01" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_switch01"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp" app:srcCompat="@drawable/line_vertical"
            android:id="@+id/imgvw_line02"
            android:contentDescription="@string/line"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_switch02"
            app:layout_constraintStart_toStartOf="@+id/btn_switch02"
            app:layout_constraintEnd_toEndOf="@+id/btn_switch02"/>
    <TextView
            android:text="@string/stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtvw_stageLabel"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/stageNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtvw_stageNo"
            app:layout_constraintStart_toEndOf="@+id/txtvw_stageLabel"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtvw_countLabel"
            app:layout_constraintEnd_toStartOf="@+id/txtvw_counter"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtvw_counter"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/btn_back"
            android:textSize="12sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/back"/>
    <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/btn_switch01" android:background="@drawable/lightswitch"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/imgvw_line03" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/imgvw_light03"
            app:layout_constraintEnd_toStartOf="@+id/imgvw_line03" android:layout_marginEnd="8dp"/>
    <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/btn_switch02" android:background="@drawable/lightswitch"
            app:layout_constraintTop_toTopOf="@+id/imgvw_line04"
            app:layout_constraintBottom_toBottomOf="@+id/imgvw_line04"
            app:layout_constraintEnd_toStartOf="@+id/imgvw_line04" android:layout_marginEnd="8dp"/>
    <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/btn_switch03" android:background="@drawable/lightswitch"
            app:layout_constraintStart_toEndOf="@+id/imgvw_line05"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp" app:srcCompat="@drawable/line_corner_rightup"
            android:id="@+id/imgvw_line03"
            android:contentDescription="@string/line"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/imgvw_light03" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp" app:srcCompat="@drawable/line_corner_rightdown"
            android:id="@+id/imgvw_line04"
            android:contentDescription="@string/line"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imgvw_light03"/>
    <ImageView
            android:layout_width="40dp"
            android:layout_height="60dp" app:srcCompat="@drawable/line_horizontal_half"
            android:id="@+id/imgvw_line05"
            android:contentDescription="@string/line"
            app:layout_constraintStart_toEndOf="@+id/imgvw_light03"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/right_off"
            android:id="@+id/imgvw_light01"
            android:contentDescription="@string/light"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/imgvw_line01"
            app:layout_constraintStart_toStartOf="@+id/btn_switch01"
            app:layout_constraintEnd_toEndOf="@+id/btn_switch01"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/right_off"
            android:id="@+id/imgvw_light03"
            android:contentDescription="@string/light"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/right_off"
            android:id="@+id/imgvw_light02"
            android:contentDescription="@string/light"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imgvw_line02"
            app:layout_constraintStart_toStartOf="@+id/btn_switch02"
            app:layout_constraintEnd_toEndOf="@+id/btn_switch02"/>
    <TextView
            android:text="@string/CLEAR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtvw_cleared" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="60sp"
            android:textColor="#F57C00" android:typeface="sans" android:textStyle="bold"
            android:visibility="invisible" tools:visibility="invisible"/>
    <Button
            android:layout_width="360dp"
            android:layout_height="560dp"
            android:id="@+id/btn_cleared"
            android:visibility="invisible" tools:visibility="invisible"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="28sp"
            android:backgroundTint="#000000" android:textColor="#FD7A52" android:typeface="sans" android:alpha="0"/>
</android.support.constraint.ConstraintLayout>